# twilio-communication-app

./: .dockerignore  .envrc  .gitignore  Dockerfile  Gopkg.toml  Jenkinsfile  LICENSE  Makefile  README.md  before_docker_compose.bash  create_dependencies.bash  docker-compose.yml  package-lock.json  package.json  pyproject.toml  server.js  up_test_script.bash
amp_anomaly_models/: Dockerfile-anamoly-models  Dockerfile-anomaly-models  prometheus_model.py
amp_kafka_consumer/: Dockerfile-kafka  consumer.py  producer.py
amp_model/: Dockerfile-model  requirements.txt
amp_model/models/: .gitignore  model.py
amp_model_api/: Dockerfile-model-api  Dockerfile-nginx  model_api.ini  model_api.py
amp_model_api/api/: model_api.ini  model_api.py
amp_simulated_clients/: README.md  setup.py
amp_simulated_clients/clients/: clients.py
amp_simulated_servers/: .gitignore  Dockerfile-servers  Dockerfile-simulated-servers  Dockerfile-simulated-servers0  flask_server.ini  flask_server.py  flask_server0.ini  requirements.txt
amp_simulated_servers/servers/: flask_server.ini  flask_server.py  flask_server.yml
charts/: Chart.yaml
charts/templates/: amp-anomaly-models-deployment.yaml  amp-model-api-deployment.yaml  amp-model-api-service.yaml  (+19 more)
cli/: index.js
common_configs/: model_api.yml
configs/: flask_server.yml  model_api.yml  traffic_simulation.yml
frontend/: Dockerfile  package.json
install/: create-webhook-certs.sh  tce.yaml  test.yaml  trafficclaim.yaml
mobile/: app.json  package.json
test/: test_amp_anomaly_models.py  test_amp_simulated_servers.py
(+40 files in other folders)
